--- a/Controle-tarefas-react/frontend/src/template/custom.css
+++ b/Controle-tarefas-react/frontend/src/template/custom.css
@@ -16,6 +16,13 @@
     padding-bottom: 60px;
 }
 
+.page-header img{
+    width: 80px;
+    height: 80px;
+    float: right;
+    margin-top: -30px;
+}
+
 .page-header h2{
     font-weight: bold
 }
